2017-05-23         Arnold D. Robbins     <arnold@skeeve.com>

	* field.c (fw_parse_field): Stop upon hitting the end of the
	record; this enables correct counting of the number of fields.
	(set_FIELDWIDTHS): Add `*' at end as meaning ``all the rest
	of the data on the line.'' Allow skip:* as well.
	* NEWS: Update information about FIELDWIDTHS.

2017-05-20         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (add_lint): Make ``no effect'' check smarter about
	reporting line numbers.

2017-05-01         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (nextc): Fix to change of 2017-04-24 such that
	@include works in multibyte locales. Thanks to Hermann
	Peifer for the bug report.

2017-04-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awkgram.y (make_regnode): Fix bug -- we should not set valref to 1
	when creating a node of type Node_regex, since valref is appropriate
	only for Node_val nodes. This fixes a bug introduced in commit
	687e6594. Also, add an assert to make it clear that this function
	supports only Node_regex and Node_dynregex.
	* awk.h (NODE): Restore sref to the `val' subportion, since it is not
	really needed for Node_regex, now that the bug in make_regnode has
	been fixed.
	(valref): Restore macro definition.

2017-04-24         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (NODE): Additional cleanups. Removed `aq' and `param_list'
	elements from various unions and removed 'nextp' and
	`a_opaque' defines. None of these were in use.
	Rework the comment for valref, per suggestion from
	Andrew Schorr.

2017-04-23         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (nextc): Adjust so that 3.1.x behavior is restored
	whereby --source arguments are concatenated. Thanks to
	"Neil R. Ormos" <ormos-gnulists17@ormos.org> for the report.

2017-04-21         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (NODE): Put the `val' subportion back the way it