@@ -1,8 +1,9 @@
 2017-05-23         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (fwtest5, fwtest6): New tests.
+	* Makefile.am (fwtest5, fwtest6, fwtest7, fwtest8): New tests.
 	* fwtest5.awk, fwtest5.in, fwtest5.ok, fwtest6.awk, fwtest6.in,
-	fwtest6.ok, fwtest7.awk, fwtest7.in, fwtest7.ok: New files.
+	fwtest6.ok, fwtest7.awk, fwtest7.in, fwtest7.ok, fwtest8.awk,
+	fwtest8.in, fwtest8.ok: New files.
 
 2017-05-20         Arnold D. Robbins     <arnold@skeeve.com>
 
