@@ -1,3 +1,8 @@
+2017-05-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* field.c (set_FIELDWIDTHS): Simplify the logic and consistentify
+	use of UINT_MAX.  Make sure that negative value after : is caught.
+
 2017-05-23         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* field.c (fw_parse_field): Stop upon hitting the end of the
